# Miemie-MultiAgent-Solver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt  test.py  test_lc.py
.github/workflows/: test.yml
app/: index.html  main.py  streaming.py
app/agents/: analyzer_agent.py  compactor_agent.py  config.py  critic_agent.py  debate_critics.py  moderator_agent.py  search_agent.py  summary_agent.py
app/graph/: state.py  workflow.py
app/services/: __init__.py  retriever.py
benchmark/: dashboard.html  run_benchmark.py  test_cases.json
benchmark/results/: comparison_report_20260720_153017.json
data/: download.py
data/markdowns/: DeepSpeed-README.md  HF-KVCache-Guide.md  PyTorch-SDPA-FlashAttention2.md  vLLM-Documentation.md
mcp_server/: ingest_docs.py  server.py
scripts/: download_papers.py
tests/: evaluate_report.py  test_api.py  test_compactor.py  test_concurrency.py  test_workflow.py
