[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miemie-multiagent-solver"
version = "0.2.0"
description = "AI Infrastructure Multi-Agent Reflective Solver — LangGraph-powered analysis platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Agent framework
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.0",
    "langchain-community>=0.4.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.0.0",

    # Web server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",

    # Vector store & embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",

    # LLM client
    "openai>=2.0.0",

    # Config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real LLM API calls (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
